springcloud/upgrade/demo-receive-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-receive
  name: demo-receive
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-receive
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: demo-receive
    spec:
      containers:
        - name: demo-receive
          image: crpi-fr9j2ao0rwew6bnj.cn-shanghai.personal.cr.aliyuncs.com/yurenovo/demo-receive:v0.0.2-upgrade
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          resources: {}
