springcloud/upgrade/demo-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-ui
  name: demo-ui
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: demo-ui
    spec:
      containers:
        - name: demo-ui
          image: crpi-fr9j2ao0rwew6bnj.cn-shanghai.personal.cr.aliyuncs.com/yurenovo/demo-ui:v0.0.1
          ports:
          - name: http-web
            containerPort: 80
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2

          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
