springcloud/upgrade/demo-handler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: handler
  namespace: demo
  labels:
    app: handler
spec:
  ports:
  - name: http-web
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: demo-handler
  sessionAffinity: None
