springcloud/upgrade/demo-receive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-receive
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: 'nginx'
  rules:
    - host: demo.test.com
      http:
        paths:
          - path: /receiveapi(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-receive
                port:
                  number: 8080
