springcloud/upgrade/demo-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ui
  namespace: demo
spec:
  ingressClassName: 'nginx'
  rules:
    - host: demo.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-ui
                port:
                  number: 80
